--- a/package.json
+++ b/package.json
@@ -5,14 +5,11 @@
   },
   "name": "voting_dapp",
   "scripts": {
-    "build": "npm run build --workspaces --if-present",
-    "prebuild": "npm run prebuild --workspaces --if-present",
-    "pretest": "npm run prebuild --workspaces --if-present",
-    "start": "npm start --workspaces --if-present",
-    "test": "npm test --workspaces --if-present"
+    "build": "npm run build",
+    "prebuild": "npm run prebuild",
+    "pretest": "npm run prebuild",
+    "start": "npm start",
+    "test": "npm test"
   },
-  "type": "module",
-  "workspaces": [
-    "src/voting_dapp_frontend"
-  ]
+  "type": "module"
 }
